WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121773
Fix functions calling to RenderObject superclass to call RenderElement instead
https://bugs.webkit.org/show_bug.cgi?id=121773
Summary
Fix functions calling to RenderObject superclass to call RenderElement instead
Antti Koivisto
Reported
2013-09-22 19:44:16 PDT
avoid future bugs
Attachments
patch
(4.11 KB, patch)
2013-09-22 19:47 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2013-09-22 19:47:06 PDT
Created
attachment 212316
[details]
patch
Antti Koivisto
Comment 2
2013-09-22 19:58:24 PDT
https://trac.webkit.org/r156255
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug