Fix functions calling to RenderObject superclass to call RenderElement instead https://bugs.webkit.org/show_bug.cgi?id=121773

Reviewed by Andreas Kling.

The class hierarchy has a new class. Superclass calls should be pointed there instead to
avoid future bugs.

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::setSelectionState):
* rendering/RenderLayerModelObject.cpp:
(WebCore::RenderLayerModelObject::styleWillChange):
(WebCore::RenderLayerModelObject::styleDidChange):
* rendering/svg/RenderSVGGradientStop.cpp:
(WebCore::RenderSVGGradientStop::styleDidChange):
* rendering/svg/RenderSVGModelObject.cpp:
(WebCore::RenderSVGModelObject::styleWillChange):
(WebCore::RenderSVGModelObject::styleDidChange):



Canonical link: https://commits.webkit.org/139766@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156255 268f45cc-cd09-0410-ab3c-d52691b4dbfc